# portfolio

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  SETUP.md  deploy.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  start-all.sh
.github/workflows/: ci-cd.yml
.kiro/specs/portfolio-web-dev/: design.md  requirements.md  tasks.md
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  build-prod.sh
backend/migrations/: 001_initial_schema.sql
backend/src/: error.rs  lib.rs  main.rs
backend/src/database/: connection.rs  init.rs  migrations.rs  mod.rs  seed.rs
backend/src/database/repositories/: contact_repository.rs  mod.rs  profile_repository.rs  project_repository.rs  skill_repository.rs
backend/src/models/: contact.rs  mod.rs  profile.rs  project.rs  skill.rs  tests.rs
backend/src/routes/: contact.rs  mod.rs  profile.rs  projects.rs  skills.rs
backend/src/services/: contact_service.rs  mod.rs  profile_service.rs  project_service.rs  skill_service.rs
backend/tests/: integration_test.rs  performance_test.rs
frontend/: .env.example  Dockerfile  Dockerfile.dev  build-prod.sh  nginx.conf  package.json  vite.config.ts
frontend/src/lib/: index.ts
frontend/src/lib/api/: client.test.ts  client.ts
frontend/src/lib/components/: ContactForm.svelte  ContactForm.test.ts  ErrorBoundary.svelte  ErrorDebugPanel.svelte  Footer.svelte  Header.svelte  HeroSection.svelte  HeroSection.test.ts  LoadingSpinner.svelte  LoadingState.svelte  OptimizedImage.svelte  ProjectCard.svelte  Toast.svelte  (+10 more)
frontend/src/routes/: +layout.svelte  +page.svelte
(+23 files in other folders)
